--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,45 @@
+* {
+  margin: 0;
+  padding: none;
+}
+
+.skyline {
+  background-image: url(../img/gradient_bg.png);
+  background-repeat: repeat-x;
+  height: 450px;
+  width: 100%;
+}
+
+.starburst {
+  background-image: url(../img/starburst.png);
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 450px;
+  background-position-x: 50%;
+  background-position-y: -300px;
+}
+
+.title {
+  background-image: url(../img/main_title.png);
+  background-repeat: no-repeat;
+  margin-left: auto;
+  margin-right: auto;
+  width: 640px;
+  height: 140px;
+}
+
+.city {
+  background-image: url(../img/city.png);
+  background-repeat: no-repeat;
+  height: 450px;
+  width: 100%;
+  background-position: 50% 114px;
+}
+
+
 body {
   position: relative;
-  background-color: #fff;
+  background-color: #1b1b1b;
 }
 
 table {
@@ -248,12 +287,12 @@ a.anchor {
 
 .sitemap {
   padding-bottom: 20px;
-  border-top-color: #ddd;
+  border-top-color: #000;
   border-top-style: solid;
   border-top-width: 1px;
   height:512px;
   text-align: center;
-  background-color: #f60;
+  background-color: #1b1b1b;
   background-image: url(../img/.png);
   background-repeat: repeat-x;
   background-position: 0px 100%;
