--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,16 @@
 }
 
 
+.subsection-divide {
+  width: 30%;
+  border-top: 1px #1b1b1b dashed;
+  margin-top: 32px;
+  margin-bottom: 16px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
 body {
   position: relative;
   background-color: #1b1b1b;
@@ -86,6 +96,10 @@ a:hover {
 h4 {
   margin-top: 16px;
   font-weight: bolder;
+}
+
+h2 {
+  margin-top:48px;
 }
 
 .imgborder {
